# blink_with_rust_in_UIAPduino

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs  memory.x  riscv32ec-unknown-none-elf.json
.cargo/: config.toml
src/: main.rs
