[package]
name = "ch32v003-rust-blink"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv-rt = { version = "0.17.1", features = ["single-hart"] }
ch32v0 = { version = "0.2.0", features = ["ch32v003", "critical-section"] }
riscv = { version = "0.16.0", features = ["critical-section-single-hart"] }
panic-halt = "0.2.0"
